--- a/drops.html
+++ b/drops.html
@@ -4,8 +4,19 @@
   <title>download drops</title>
   
   <link rel="stylesheet" type="text/css" href="style.css">
-  
-<style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    /* Add your custom styles here */
+    body {
+      font-size: 16px; /* Set a base font size */
+    }
+
+    /* Media query for smaller screens */
+    @media (max-width: 600px) {
+      body {
+        font-size: 14px; /* Decrease font size for smaller screens */
+      }
+    }
 
 body {
       margin: 0;
