--- a/drops.html
+++ b/drops.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <meta charset="UTF-8">
+  <title>Your Website</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+
   <title>download drops</title>
   
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -21,7 +27,7 @@
     }
 
     a:visited {
-      color: gray;
+      color: rgb(201, 201, 201);
     }
 
     a:hover {
