--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>radical linkages</title>
+
+  <meta charset="UTF-8">
+  <title>Your Website</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+
+  <title>periloustxt</title>
   
   <link rel="stylesheet" type="text/css" href="style.css">
   
@@ -22,7 +28,7 @@
     }
 
     a:visited {
-      color: gray;
+      color: rgb(201, 201, 201);
     }
 
     a:hover {
