--- a/drops.html
+++ b/drops.html
@@ -3,11 +3,11 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Your Website</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-
-
   <title>download drops</title>
+  <link rel="icon" href="/favicon.ico/" type="image/x-icon">
+
+
+ 
   
   <link rel="stylesheet" type="text/css" href="style.css">
   
