--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   <title>periloustxt</title>
-  <link rel="icon" href="/favicon.ico/" type="image/x-icon">
+  <link rel="icon" href="https://periloustxt.github.io/favicon.ico" type="image/x-icon">
 
 
 
@@ -14,6 +14,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Andale+Mono&display=swap" rel="stylesheet">
+
   <style>
     /* Add your custom styles here */
     body {
@@ -63,8 +64,9 @@ body {
       text-align: justify;
     }
 </style>
-    
 </head>
+
+
     <body>
     <div align="center">
     <div class="container">
