--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
 <!-- new content comes in below here -->
 
 
-            <a href="linkdump-01.html">link dump #01: community building, techno-politics, creativity</a><br /><br />
+            <a href="linkdump-01.html">link dump #01: techno-politics, community building, creativity</a><br /><br />
             
             <a href="drops.html">file drop #01: Ann Laura Stoler</a>
 
