--- a/drops.html
+++ b/drops.html
@@ -6,7 +6,7 @@
   <title>download drops</title>
   
 
- 
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   
   <link rel="stylesheet" type="text/css" href="style.css">
   
