--- a/linkdump-01.html
+++ b/linkdump-01.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 
-  
-  <title>download drops</title>
+  <!-- update this -->
+  <title>link dump #01: techno-politics, community building, creativity</title>
   
 
- 
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   
   <link rel="stylesheet" type="text/css" href="style.css">
   
@@ -54,7 +54,7 @@ body {
     <div class="center-align">
     <div class="container">
 
-<!-- title goes here -->
+<!-- update this: title goes here -->
     <h1>link dump #01</h1>
 <!-- title goes above here -->
 techno-politics, community building, creativity
@@ -73,7 +73,7 @@ techno-politics, community building, creativity
 Therefore we must extend the useful life of our computing devices.
 <br/><br/><hr><br/><br/>
 
-<a href="https://zine.yesterweb.org/issue-00/index.php?page=2">The Internet and Capitalism: </a>The 'old web' we affectionately refer to is a web that didn't put profit first - because no one had figured out how to yet. When the internet first came into popular use, the biggest businesses hadn't yet found a significant way to capitalize on it.
+<a href="https://zine.yesterweb.org/issue-00/index.php?page=2">The Internet and Capitalism:</a> The 'old web' we affectionately refer to is a web that didn't put profit first - because no one had figured out how to yet. When the internet first came into popular use, the biggest businesses hadn't yet found a significant way to capitalize on it.
 <br/><br/><hr><br/><br/>
 
 <a href="https://yesterweb.org/#summary">Reclaiming The Internet:</a> Nostalgia for the old web was not just limited to people that had experienced the old web. Surprisingly, there were many children and young adults that felt anemoia, or nostalgia for a place or time they have never been. It is clear that this was a response to the deterioration of the core web that these young people had grown up in. What isn't clear is whether this reaction is a longing for the old web and its aesthetics or if it reflects a deeper desire for change that is partially reflected by the positive aspects of the old web.
