--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>periloustxt</title>
 
 
-
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   
   <link rel="stylesheet" type="text/css" href="style.css">
   
@@ -91,7 +91,7 @@ body {
           
             
 <div class="footer">
-<p>don't click:
+<p>don't click!:
   <a href="https://textz.com/textz/Fuck%20Off,%20Google.pdf">contact</a> | 
   <a href="https://textz.com/textz/Intellectual%20Property.pdf">copyright</a> | 
   <a href="https://textz.com/textz/Pirate%20Modernity.pdf">share</a> | 
