--- a/01.html
+++ b/01.html
@@ -1,4 +1,18 @@
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name=viewport content=width=1%><pre style=font:unset>periloustxt
+<style>
+  body {
+    max-width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    font-size: 14px;
+  }
+</style>
+</head>
+<body>
+
 drop #01:
 
 <a href="https://wimvanderbauwhede.codeberg.page/articles/frugal-computing/">Frugal Computing</a>
@@ -26,3 +40,6 @@ drop #01:
 
 
 <a href="index.html">[return]</a>
+
+</body>
+</html>
