--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      body {
+        background-color: white;
+        margin: 0;
+        padding: 10px;
+        box-sizing: border-box;
+      }
+      
+      p, a {
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
+        color: inherit;
+      }
+    </style>
+  </head>
+<body>
+periloustxt
 
-<meta name=viewport content=width=1%><pre style=font:unset>periloustxt
-  
 lo-fi html link dumps. political digital garden. 
 
 
