--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-      body {
-        background-color: white;
-        margin: 0;
-        padding: 10px;
-        box-sizing: border-box;
-      }
-      
-      p, a {
-        margin: 0;
-        padding: 0;
-        text-decoration: none;
-        color: inherit;
-      }
-    </style>
-  </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+body {
+    background-color: white;
+    margin: 0;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+  
+  p, a {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    color: blue;
+  }
+  
+  a:visited {
+    color: purple;
+  }
+  
+  a {
+    text-decoration: underline;
+  }
+</style>
+</head>
 <body>
 periloustxt
+<br/><br/>
 
 lo-fi html link dumps. political digital garden. 
 
 
 
-<a href=01.html>drop #01</a>
+<a href="01.html">drop #01</a>
 
 
