--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><style>
 body {
     background-color: white;
     margin: 0;
@@ -24,16 +20,8 @@ body {
   a {
     text-decoration: underline;
   }
-</style>
-</head>
-<body>
-periloustxt
-<br/><br/>
-
-lo-fi html link dumps. political digital garden. 
-
-
-
-<a href="01.html">drop #01</a>
-
-
+</style></head><body><h1>periloustxt</h1><br/><br/>lo-fi html link drops. a political digital garden. <br/><br/>
+<!-- updates below --><ul>
+<li>2023-11-22: <a href="01.html">drop #01</a></li>
+<li>2023-11-22: <a href="https://textz.com">inspiration: textz.com</a></li>
+</ul></body></html>
