--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
-<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><style>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"> <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><style>
 body {
-    background-color: white;
-    margin: 0;
-    padding: 10px;
-    box-sizing: border-box;
-  }
+      background-color: white;
+      margin: 0;
+      padding: 10px;
+      box-sizing: border-box;
+      font-family: 'Roboto', sans-serif;
+      }
   
-  p, a {
+p, a {
     margin: 0;
     padding: 0;
     text-decoration: none;
     color: blue;
   }
-  
+    
   a:visited {
     color: purple;
   }
-  
+    
   a {
     text-decoration: underline;
   }
-</style></head><body><h1>periloustxt</h1><br/><br/>lo-fi html link drops. a political digital garden. <br/><br/>
-<!-- updates below --><ul>
+  </style></head><body><h1>periloustxt</h1><br/><br/>lo-fi html link drops. a political digital garden. <br/><br/>
+
+<ul>
 <li>2023-11-22: <a href="01.html">drop #01</a></li>
 <li>2023-11-22: <a href="https://textz.com">inspiration: textz.com</a></li>
 </ul></body></html>
