--- a/01.html
+++ b/01.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><style>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"> <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><style>
 body {
-    background-color: white;
-    margin: 0;
-    padding: 10px;
-    box-sizing: border-box;
-  }
-  
-  p, a {
+      background-color: white;
+      margin: 0;
+      padding: 10px;
+      box-sizing: border-box;
+      font-family: 'Roboto', sans-serif;
+      }
+
+p, a {
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -21,7 +22,7 @@ body {
     text-decoration: underline;
   }
 </style></head><body>
-<!-- updates below -->
+
 2023-11-22 drop #01: <br/><br/>
 
 <a href="https://wimvanderbauwhede.codeberg.page/articles/frugal-computing/">Frugal Computing</a><br/><br/>
