--- a/01.html
+++ b/01.html
@@ -1,27 +1,4 @@
-<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"> <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><style>
-body {
-      background-color: white;
-      margin: 0;
-      padding: 10px;
-      box-sizing: border-box;
-      font-family: 'Roboto', sans-serif;
-      }
-
-p, a {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    color: blue;
-  }
-  
-  a:visited {
-    color: purple;
-  }
-  
-  a {
-    text-decoration: underline;
-  }
-</style></head><body>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><link href="styles.css" rel="stylesheet"></head><body>
 
 2023-11-22 drop #01: <br/><br/>
 
