--- a/01.html
+++ b/01.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><link href="styles.css" rel="stylesheet"></head><body>
 
-2023-11-22 drop #01: <br/><br/>
+<h1>2023-11-22 drop #01:</h1>
 
 <a href="https://wimvanderbauwhede.codeberg.page/articles/frugal-computing/">Frugal Computing</a><br/><br/>
 
