--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><link href="styles.css" rel="stylesheet"></head><body><h1>periloustxt</h1>lo-fi html digital garden link drops:
-<ul>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"><link href="styles.css" rel="stylesheet"></head><body><h1>periloustxt</h1>lo-fi html digital garden link drops:<ul>
 <li>2023-11-22: <a href="01.html">drop #01</a></li>
-<li>2023-11-22: <a href="https://textz.com">inspiration: textz.com</a></li>
-</ul></body></html>
+<li>2023-11-22: <a href="https://textz.com">inspiration: textz.com</a></li></ul></body></html>
