--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-<link href="styles.css" rel="stylesheet">
-    <style>.bottom-text{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    padding: 20px;
-    text-align: center;}</style>
-</head><body>
-<h1>periloustxt</h1>
+<link href="styles.css" rel="stylesheet"></head><body>
+<h1>perilous<span style="color: rgb(52, 199, 199);">txt</span></h1>
 <b>lo-fi html digital garden link drops:</b><br><br>
+<!--update-->
 
 2023-11-22: <a href="02.html">drop #02: internet tools and resources in the techno-liberal era</a><br><br>
 2023-11-21: <a href="01.html">drop #01: techno-politics, frugal computing, being radical online, interface design</a><br><br>
 2023-11-21: <a href="https://textz.com">inspiration: textz.com</a><br><br><br><br><div class="bottom-text">
 
-<a href="TKTK">tktk</a></div>
+
+
 </body></html>
