--- a/001.html
+++ b/001.html
@@ -9,6 +9,7 @@
     <img src="creator_5kb.jpg"><br>
     <code>5kb</code><br>
     <br>
+    <div class="text-container">
    <h2>The Techno-Orientalism in The Creator</h2>
 
    TKTK
@@ -17,5 +18,7 @@
    <br>
    <br>
    &#10596; <a href="blog.html">back</a> 
+
+</div>   
 </body>
 </html>
