--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <h1>about</h1>
     <img src="/about_this-image-is-7kb.jpg"><br>
     <code>7kb</code><br><br>
+    <div class="text-container">
     Welcome to my corner of the web. Everything is 
     coded to be very efficient: HTML, very little 
     CSS, and very small image files.
@@ -28,6 +29,6 @@
     <br>
     <br>
     &#10596; <a href="index.html">back</a>
-    
+</div>  
 </body>
 </html>
