--- a/blog.html
+++ b/blog.html
@@ -9,12 +9,14 @@
     <img src="/blog_this-image-is-6kb.jpg"><br>
     <code>6kb</code>
     <h2>2023</h2>
+    <div class="text-container"></div>
     &#10596; <a href="001.html">2023-12-23: blog 001</a><br>
     
 
-
+  
    <br>
    <br>
    &#10596; <a href="index.html">back</a> 
+</div>
 </body>
 </html>
