--- a/links.html
+++ b/links.html
@@ -8,7 +8,7 @@
     <h1>link garden</h1>
 <img src="/links_this-image-is-7kb.jpg"><br>
 <code>7kb</code>
-
+<div class="text-container">
     <h2>things to read</h2>
     &#10596; <a href="https://textz.com">textz</a>
     <br>
@@ -55,5 +55,6 @@ Web based RSS reader.
     <br>
     <br>
     &#10596; <a href="index.html">back</a>
+</div>
 </body>
 </html>
