--- a/001.html
+++ b/001.html
@@ -7,25 +7,18 @@
 <body>
     <h1>001</h1>
     <img src="creator_5kb.jpg"><br>
-    <code>Ngô Thanh Vân as android Kami in The Creator (2023). 5kb</code><br>
+    <code>Ngô Thanh Vân as android Kami in The Creator (2023): 5kb</code><br>
     <br>
     <div class="text-container">
   
       <h2>Introductions</h2>
       I wanted to start a blog to keep some of my ideas on technology, politics, Asian futurism, and what is being referred to as a "New Cold War" between the US and China. Most of these thoughts are very first-drafty, but I'll try to use this space to develop those ideas. <br><br>
       
-      I'm interested in technological exceptionalist politics and its epistemological underpinnings, historical ontological traces, and the lasting techno-Orientalism in speculative futures. There is a politics of optimism surrounding technology and its potentials without regard for its ecofascist tendencies; the will to pursue an absolute rational biopolitical management through technological development at the expense of all ecology. Additionally, a techno-liberal promise of emancipation from all work is based on an ordering system of labor wherein a category of the surrogate human takes the role of manual labor [1]. According to Atanasoski and Vora, these techno-liberal enchantments (such as robots or AI having feelings) obscure the real human labor that prop up this ordering system. Chinese factory workers living in their working spaces, cobalt mines in the Democratic Republic of the Congo, a global network of technology work obscured by the emancipatory promise of technology work in the West: the promise of change through coding.<br><br>
+      I'm interested in technological exceptionalist politics and its epistemological underpinnings, historical ontological traces, and the lasting techno-Orientalism in speculative futures. There is a politics of optimism surrounding technology and its potentials without regard for its ecofascist tendencies; the will to pursue an absolute rational biopolitical management through technological development at the expense of all ecology. Additionally, a techno-liberal promise of emancipation from all work is based on an ordering system of labor wherein a category of the surrogate human takes the role of manual labor.<sup><a href="#footnote1">1</a></sup> According to Atanasoski and Vora, these techno-liberal enchantments (such as robots or AI having feelings) obscure the real human labor that prop up this ordering system. Chinese factory workers living in their working spaces, cobalt mines in the Democratic Republic of the Congo, a global network of technology work obscured by the emancipatory promise of technology work in the West: the promise of change through coding.<br><br>
 
-      &#10596; [1]<a href="https://www.dukeupress.edu/surrogate-humanity">Surrogate Humanity by Neda Atanasoski and Kalindi Vora</a><br><br>
+      But coding and coders are not a monolith. Communities of hackers, self-identified 'cyber-punks', open-source software engineers, anarchist online archivists and writers, all contribute to a form of coding work that resists the capitalistic mutations of the internet. Beyond coders: community moderators and content hosts contribute to the social labor of maintaining a safe space for communities to generate discourse and build connections. Their role is akin to a political organizer. A community of computer enthusiasts focused on building ecologically friendly tech, de-growth, carving out augments to our web (the Gemini small web protocol is an incredible place<sup><a href="#footnote2">2</a></sup>), producing easy to access lo-fi blog hosting sites (see the work at bearblog.dev),<sup><a href="#footnote3">3</a></sup> are all building anew and constantly doing so in the decentralized and fractal space that the internet is.<br><br>
 
-      But coding and coders are not a monolith. Communities of hackers, self-identified 'cyber-punks', open-source software engineers, anarchist online archivists and writers, all contribute to a form of coding work that resists the capitalistic mutations of the internet. Beyond coders: community moderators and content hosts contribute to the social labor of maintaining a safe space for communities to generate discourse and build connections. Their role is akin to a political organizer. A community of computer enthusiasts focused on building ecologically friendly tech, de-growth, carving out augments to our web (the Gemini small web protocol is an incredible place [2]), producing easy to access lo-fi blog hosting sites (see the work at bearblog.dev) [3], are all building anew and constantly doing so in the decentralized and fractal space that the internet is.<br><br>
-
-      &#10596; [2]<a href="https://geminiprotocol.net/">Gemini Protocol</a><br>
-      &#10596; [3]<a href="https://bearblog.dev">bearblog.dev</a><br><br>
-
-      The technological exceptionalists carry on a European technics, a tradition on the use of technology; that Greek Promethean use of tech where tech is to be used to obtain the power of the gods [4]. Those Musk types imagine one day abandoning the confines of Earth, continuing a colonial practice while securing the immortality of the human and along with it the anthropocentric ordering systems that constitute the 'human'; along with it those regimes of labor categorizations that ensure an exploited class at the very bottom of a surrogate humanism.<br><br>
-
-      &#10596; [4]<a href="https://mitpress.mit.edu/9780995455009/the-question-concerning-technology-in-china/">Yuk Hui on The Question Concerning Technology in China</a><br><br>
+      The technological exceptionalists carry on a European technics, a tradition on the use of technology; that Greek Promethean use of tech where tech is to be used to obtain the power of the gods.<sup><a href="#footnote4">4</a></sup> Those Musk types imagine one day abandoning the confines of Earth, continuing a colonial practice while securing the immortality of the human and along with it the anthropocentric ordering systems that constitute the 'human'; along with it those regimes of labor categorizations that ensure an exploited class at the very bottom of a surrogate humanism.<br><br>
 
       This is still a very general view. The internet became corporatized, shaped by capitalist advertisement models, funneled into just several walled gardens of technology eco-systems, made increasingly into an addictive technology used to surveil its users. The emancipatory promises of more democracy through more and more free speech online became apparent as enchantment when those free speech absolutists took free speech to mean speech with no accountability, speech as vacuous of context. Safe spaces must be carved out constantly; new social networks, new small webs, new moderation tactics (like the recent Reddit moderator protests). Technology capitalists reinforce a narrative of exceptionalism in tech found through individual genius and competition, setting forth a global legal regime of intellectual property over chip manufacturing; a juridical power that maintains regimes of private property and also racialized considerations over creativity. This is to say that creativity is reserved for the West, the musical genius as a role reserved for the European Mozart and Beethoven figure, whereas Asian creation is not creativity; it copying, theft, spying, rip-offs, mass produced. The "New Cold War" is a war over semiconductor production and technological dominance, but also a war over the epistemological ordering of creativity.<br><br>
 
@@ -33,11 +26,27 @@
 
    
 
-  
+  <sup>
+  <hr>
+  <aside id="footnote1">
+        <p><strong>1:</strong><a href="https://www.dukeupress.edu/surrogate-humanity">Surrogate Humanity by Neda Atanasoski and Kalindi Vora</a></p>
+  </aside>
+  <aside id="footnote2">
+        <p><strong>2:</strong><a href="https://geminiprotocol.net/">Gemini Protocol</a></p>
+  </aside>
+  <aside id="footnote3">
+        <p><strong>3:</strong><a href="https://www.dukeupress.edu/surrogate-humanity">Surrogate Humanity by Neda Atanasoski and Kalindi Vora</a></p>
+  </aside>
+  <aside id="footnote4">
+        <p><strong>4:</strong><a href="https://mitpress.mit.edu/9780995455009/the-question-concerning-technology-in-china/">Yuk Hui on The Question Concerning Technology in China</a></p>
+  </aside>
+  </sup>
+  <hr>
 
-   <br>
-   <br>
-   &#10596; <a href="blog.html">back</a> 
+
+<br>
+<br>
+&#10596; <a href="blog.html">back</a> 
 
 </div>   
 </body>
