--- a/001.html
+++ b/001.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h1>001</h1>
-    <img src="creator_5kb.jpg"><br>
-    <code>Ngô Thanh Vân as android Kami in The Creator (2023): 5kb</code><br>
+    <img src="/techno_orientalism-8kb.jpeg"><br>
+    <code>Techno-Orientalist cityscape in Bladerunner (1982): 5kb</code><br>
     <br>
     <div class="text-container">
   
