--- a/about.html
+++ b/about.html
@@ -5,20 +5,16 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+ 
+  &#10594; <a href="index.html">back</a>
+  
     <h1>about</h1>
     <img src="/about_this-image-is-7kb.jpg"><br>
     <code>7kb</code><br><br>
     <div class="text-container">
-    Welcome to my corner of the web. Everything is 
-    coded to be very efficient: HTML, very little 
-    CSS, and very small image files.
+    An intentionally lo-fi and frugal HTML website where I think about technological exceptionalism, political theory, Asian futurism, audio engineering, sonic regimes, speculative fictions, and post random streams of consciousness.
     <br><br>
-    I'm hoping to use this space to think about political 
-    theory, technological liberalism, frugal computing,
-    digital safe spaces, mutual-aid, decolonial futures, 
-    speculative fiction, Asian identity-making, audio 
-    engineering, punk music, sonic regimes of power, 
-    and random streams of consciousness.
+    All images are super low in file size and their digital artifacts load quickly! Clarity of the visual isn't the point here. All writings here are very much first drafts and so they too load fast in their own way. The final argument isn't the point here.
     <br><br>
     I do welcome feedback! I'm using this space 
     anonymously, but you can email me if you want 
@@ -26,9 +22,7 @@
     just say what's up!
     
 
-    <br>
-    <br>
-    &#10596; <a href="index.html">back</a>
+<br><br><br>
 </div>  
 </body>
 </html>
