--- a/001.html
+++ b/001.html
@@ -5,18 +5,19 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>001</h1>
+    &#10594; <a href="blog.html">back</a>
+    <h1>001 Introductions</h1>
     <img src="/techno_orientalism-8kb.jpeg"><br>
     <code>Techno-Orientalist cityscape in Bladerunner (1982): 5kb</code><br>
     <br>
     <div class="text-container">
   
-      <h2>Introductions</h2>
-      I wanted to start a blog to keep some of my ideas on technology, politics, Asian futurism, and what is being referred to as a "New Cold War" between the US and China. Most of these thoughts are very first-drafty, but I'll try to use this space to develop those ideas. <br><br>
+     
+      I wanted to start a blog to develop some of my ideas on technology, politics, Asian futurism, and what is being referred to as a "New Cold War" between the US and China. Most of these thoughts are very first-drafty, but I'll try to use this space to build these ideas. <br><br>
       
       I'm interested in technological exceptionalist politics and its epistemological underpinnings, historical ontological traces, and the lasting techno-Orientalism in speculative futures. There is a politics of optimism surrounding technology and its potentials without regard for its ecofascist tendencies; the will to pursue an absolute rational biopolitical management through technological development at the expense of all ecology. Additionally, a techno-liberal promise of emancipation from all work is based on an ordering system of labor wherein a category of the surrogate human takes the role of manual labor.<sup><a href="#footnote1">1</a></sup> According to Atanasoski and Vora, these techno-liberal enchantments (such as robots or AI having feelings) obscure the real human labor that prop up this ordering system. Chinese factory workers living in their working spaces, cobalt mines in the Democratic Republic of the Congo, a global network of technology work obscured by the emancipatory promise of technology work in the West: the promise of change through coding.<br><br>
 
-      But coding and coders are not a monolith. Communities of hackers, self-identified 'cyber-punks', open-source software engineers, anarchist online archivists and writers, all contribute to a form of coding work that resists the capitalistic mutations of the internet. Beyond coders: community moderators and content hosts contribute to the social labor of maintaining a safe space for communities to generate discourse and build connections. Their role is akin to a political organizer. A community of computer enthusiasts focused on building ecologically friendly tech, de-growth, carving out augments to our web (the Gemini small web protocol is an incredible place<sup><a href="#footnote2">2</a></sup>), producing easy to access lo-fi blog hosting sites (see the work at bearblog.dev),<sup><a href="#footnote3">3</a></sup> are all building anew and constantly doing so in the decentralized and fractal space that the internet is.<br><br>
+      But coding and coders are not a monolith. Communities of hackers, self-identified 'cyber-punks', open-source software engineers, anarchist online archivists and writers, all contribute to a form of coding work that resists the capitalistic mutations of the internet. Beyond coders: community moderators and content hosts contribute to the social labor of maintaining a safe space for communities to generate discourse and build connections. Their role is akin to a political organizer. A community of computer enthusiasts focused on building ecologically friendly tech, de-growth, carving out augments to our web (the Gemini small web protocol is an incredible place),<sup><a href="#footnote2">2</a></sup> producing easy to access lo-fi blog hosting sites (see the work at bearblog.dev),<sup><a href="#footnote3">3</a></sup> are all building anew and constantly doing so in the decentralized and fractal space that the internet is.<br><br>
 
       The technological exceptionalists carry on a European technics, a tradition on the use of technology; that Greek Promethean use of tech where tech is to be used to obtain the power of the gods.<sup><a href="#footnote4">4</a></sup> Those Musk types imagine one day abandoning the confines of Earth, continuing a colonial practice while securing the immortality of the human and along with it the anthropocentric ordering systems that constitute the 'human'; along with it those regimes of labor categorizations that ensure an exploited class at the very bottom of a surrogate humanism.<br><br>
 
@@ -41,13 +42,11 @@
         <p><strong>4:</strong><a href="https://mitpress.mit.edu/9780995455009/the-question-concerning-technology-in-china/">Yuk Hui on The Question Concerning Technology in China</a></p>
   </aside>
   </sup>
-  <hr>
 
 
-<br>
-<br>
-&#10596; <a href="blog.html">back</a> 
 
+
+<br><br><br>
 </div>   
 </body>
 </html>
