--- a/blog.html
+++ b/blog.html
@@ -5,18 +5,23 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>periloustxt blog</h1>
+  &#10594; <a href="index.html">back</a>
+    <h1>blog</h1>
     <img src="/blog_this-image-is-6kb.jpg"><br>
     <code>6kb</code>
+
+
+
+
     <h2>2023</h2>
     <div class="text-container"></div>
-    &#10596; <a href="001.html">2023-12-23: blog 001</a><br>
+
+
+    &#10596; <a href="001.html">2023-12-23: 001 Introductions</a><br>
     
 
   
-   <br>
-   <br>
-   &#10596; <a href="index.html">back</a> 
+<br><br><br>
 </div>
 </body>
 </html>
