--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>perilous txt</h1>
+    <h1>periloustxt</h1>
     <img src="/computing_this-image-is-6kb.jpg"><br>
     <code>this image is just 6kb.</code>
     <br><br>
@@ -15,7 +15,10 @@
     &#10596; <a href="blog.html">blog</a><br>
     &#10596; <a href="links.html">link garden</a><br>
     &#10596; <a href="mailto:i26lbnpe@anonaddy.me">email me</a><br>
-    &#10596; finger periloustxt@happynetbox.com<br>
+    &#10596; finger periloustxt@happynetbox.com<br><br>
+
+   
+
     
 </body>
 </html>
